# SkyrimAlchemyOCR

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  Recipes.cpp  Recipes.h  levenshtein.cpp  main.cpp  recipe.h  recipe_generator.cpp  recipes.cpp
data/: ingredients-ger.json  ingredients-ger.txt  ingredients.json  recipes.json  uesp-ingredients-list.txt
inc/: extractItemsTextFromImage.h
include/: Inventory.h  OCRProcessor.h  Recipe.h  RecipeSearcher.h  Recipes.h  Translater.h  Translator.h  levenshtein.h
src/: CMakeLists.txt  OCRProcessor.cpp  Recipes.cpp  Translater.cpp  Translator.cpp  extractItemsTextFromImage.cpp  main.cpp  recipe_generator.cpp
tests/: CMakeLists.txt  Inventory_tests.cpp  OCRProcessor_tests.cpp  Recipe_tests.cpp  Translator_tests.cpp
